# analyzer_functions_package

./: .gitignore  conda_env.txt  debug_metadata.py  ffpa_report.csv  pyproject.toml  requirements-dev.in  requirements.txt  setup.cfg  setup.py  tasks.py
analyzer_functions/: alphapose-results.json  hip_path_analysis.py  imputed_ma.npy  json_to_npy.py  pipeline.py
analyzer_functions/output/: rf_bad_frames.npy
debug_tools/: alphapose_bbox_overlay.py  debug_skeleton_hip_y_overlay.py  overlay_debug_video.py  show_reference_pose.py  skeleton_3d_viewer.py  skeleton_overlay.py  timeline_overlay.py
output/job_mov1/: video_meta.txt
scripts/: refactor_project.sh
src/analyzer_pkg/analysis/: __init__.py  compute_reference_lengths.py  convert.py  foot_orientation_analysis.py  forward_knees_analysis.py  head_orientation_analysis.py  hip_path_overlay.py  inward_knees_analysis.py  keypoint_filter.py  ref_frame_find.py  squat_depth_analysis.py  squat_detector.py
src/analyzer_pkg/cli/: __init__.py  full_video_analysis.py  main.py
src/analyzer_pkg/data/data/: reference_frame.npy
src/analyzer_pkg/exercises/squat/: __init__.py  align_bf_pelvis.py  align_motionbert_to_alphapose.py  context.py  detect_bad_frames.py  driver.py  feet_width_analysis.py  forward_knees_analysis.py  forward_lean_analysis.py  heel_raise_analysis_26.py  hip_path_analysis.py  hip_path_feet_head_overlay.py  hip_path_overlay.py  inward_knees_analysis.py  ma_impute.py  motionbert_output_to_unit_square.py  ref_frame_find.py  skeleton_length_fix.py  squat_depth_analysis.py  squat_detector.py
src/analyzer_pkg/exercises/squat/data/: ref_lengths.json  reference_frame_26.npy
src/analyzer_pkg/models/models/: rf_badframe_detector.joblib
src/analyzer_pkg/tools/AlphaPose/: =0.29.33  requirements.txt  requirements_clean.txt  requirements_final.txt  run_alphapose.bat  run_alphapose.sh
src/analyzer_pkg/tools/AlphaPose/alphapose/: version.py
src/analyzer_pkg/tools/AlphaPose/detector/nms/src/: soft_nms_cpu.cpp
src/analyzer_pkg/tools/AlphaPose/scripts/: demo_inference.py
src/analyzer_pkg/tools/AlphaPose/videos/output/: alphapose-results.json
src/analyzer_pkg/tools/AlphaPose/videos/output/2025-05-19_18-30-45/: alphapose-results.json
src/analyzer_pkg/tools/MotionBERT/: alphapose-results.json  run_motionbert.bat  run_motionbert.sh
src/analyzer_pkg/tools/MotionBERT/output/3d-pose-results.npz/: X3D.npy
src/analyzer_pkg/utils/: tasks.py
videos/: IMG_4692.mp4:Zone.Identifier
