[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

# ────────────────────────────────────────────────────────────────
[project]
name            = "analyzer-functions"
version         = "0.1.0"
description     = "End‑to‑end human‑movement video analysis (AlphaPose → MotionBERT → custom analytics)."
readme          = "README.md"
requires-python = ">=3.9"

# Runtime deps  ─ add / remove as you like
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "flask>=2.3",
    "boto3>=1.34",
    "joblib>=1.4",
    "scikit-learn>=1.3",
    "opencv-python>=4.9",
    "tqdm>=4.66",
]

# optional groups (e.g. dev tools)
[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

# CLI entry‑points  ──────────────────────────────────────────────
[project.scripts]
full-video-analysis = "analyzer_pkg.cli.full_video_analysis:main"
squat-driver        = "analyzer_pkg.exercises.squat.driver:run"

# ────────────────────────────────────────────────────────────────
# setuptools configuration
[tool.setuptools]
package-dir            = {"" = "src"}
include-package-data   = true

# only **one** `packages.find` section!
[tool.setuptools.packages.find]
where      = ["src"]
include    = ["analyzer_pkg*"]
exclude    = ["tests*"]

# non‑Python files to ship inside the wheel
[tool.setuptools.package-data]
# reference skeletons / model artefacts
"analyzer_pkg.exercises.squat.data" = ["*.npy", "*.json"]
"analyzer_pkg.models"               = ["*.joblib"]

# everything under tools/ (weights, configs, scripts, …)
"analyzer_pkg.tools" = ["**/*"]

# ────────────────────────────────────────────────────────────────
#  (no further sections needed)
